--- a/packages/coffee.chealt.com/src/components/form/select/select.css
+++ b/packages/coffee.chealt.com/src/components/form/select/select.css
@@ -1,7 +1,8 @@
 select {
   display: block;
   width: 100%;
-  border: 0 none;
+  border-width: 0;
+  border-radius: 0;
   padding: var(--gap);
   font-size: 1.2rem;
   background-color: var(--color-secondary);
